--- a/notebooks/TD-learning.ipynb
+++ b/notebooks/TD-learning.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
     "                sp = self.states_index[sp_location]\n",
     "                prob = 0.1\n",
     "                P[sp,a,s]+=prob\n",
-    "        return P"
+    "        return P\n"
    ]
   },
   {
@@ -302,6 +302,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.9, 0.8, 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0.2, 0.8, 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0.1, 0.8, 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0. ],\n",
+       "       [0.1, 0. , 0. , 0. , 0.8, 0.8, 0. , 0. , 0.1, 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. ],\n",
+       "       [0. , 0. , 0.1, 0. , 0. , 0. , 0.8, 0.8, 0. , 0. , 0.1, 0. ],\n",
+       "       [0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1],\n",
+       "       [0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0.9, 0.8, 0. , 0. ],\n",
+       "       [0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0.2, 0.8, 0. ],\n",
+       "       [0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0.1, 0.8],\n",
+       "       [0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0.1]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Environment().generate_transition_model_2()[:,0,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -324,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
